<resources>
    <string name="app_name">vibration</string>
    <string name="input_hint">Please input the vibration code</string>
    <string name="title_text">Haptic Feedback Test</string>
    <string name="SubmitButton">SUBMIT</string>
    <string name="straight">straight</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="obstacle">obstacle</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pattern_navigation">Pattern Navigation</string>
    <string name="needle_navigation">Neddle Navigation</string>
    <string name="compass_navigation">Compass Navigation</string>
    <string name="touch">touch</string>
    <string name="motion">motion</string>
</resources>